# Zomboid3D.Nevermind

./: .gitignore  Nevermind.sln  README.md  mnbSpec.md  mnb_spec.txt
CodeExtention/: language-configuration.json  nevermind-language-0.0.1.vsix  package.json  snipsets.json
CodeExtention/syntaxes/: nm.tmLanguage.json
Compiler/: NmCompiler.sln
Compiler/NmCompiler/: NmCompiler.csproj  Program.cs
Compiler/NmCompilerLib/: ElapsedTimeType.cs  NmCompilerLib.csproj  NmMetadata.cs  NmProgram.cs  NmSource.cs
Compiler/NmCompilerTests/: NmCompilerTests.csproj  Program.cs
Examples/: .sample.nm.swp  _sample.nm  arrays.nm  commentsAndStrings.nm  expression.nm  functionModifiers.nm  literals.nm  output.l  sample.json  sample.nm  stringEscapes.nm  typeCasting.nm
Examples/modules/: io.nm  io.nmm  math.nmm  syscalls.nm  systypes.nm
Nevermind/: Class1.cs  ElapsedTimeType.cs  Nevermind.csproj  NmMetadata.cs  NmProgram.cs  NmSource.cs
Nevermind/ByteCode/: BuiltInTypes.cs  ByteCode.cs  ByteCodeHeader.cs  Function.cs  Instruction.cs  InstructionType.cs  IntegerType.cs  NumeratedConstant.cs  Type.cs
Nevermind/Compiler/: CompileError.cs  CompileErrorType.cs  Lexeme.cs  (+8 more)
NevermindTests/: NevermindTests.csproj  Program.cs  expression.nm  file.nm
Runner/: CMakeLists.txt  main.c
Runner/lib/: coretypes.h  crc32.c  crc32.h  nmError.c  nmError.h  parser.c  parser.h  program.c
Runner/lib/runtime/: defaultSubroutines.c  defaultSubroutines.h  environment.c  environment.h  instructions.c  instructions.h  instructionsMacro.h  stack.c  stack.h  subroutines.c  subroutines.h  types.h
(+216 files in other folders)
